src/_includes/assets/css/screen.css
/* ... */
.rtl-layout .author-card .avatar-wrapper,
.rtl-layout .author-card img.author-profile-image {
  margin: 0 0 0 15px;
}

.rtl-layout .post-card-meta {
  padding: 0 4px 25px 25px;
}

.rtl-layout .meta-item,
.rtl-layout .reading-time {
  margin-left: 0;
  margin-right: 20px;
}

.rtl-layout .post-card-tags a {
  padding-right: 0;
  padding-left: 15px;
  direction: ltr;
}

@media (min-width: 768px) {
  .rtl-layout .post-card .post-card-content-link {
    padding: 0 30px 0 0;
  }

  .rtl-layout .post-card .post-card-meta {
    padding: 0 34px 0 0;
  }
}

@media (max-width: 999px) {
  .rtl-layout .site-nav-middle {
    margin-left: auto;
  }

  .rtl-layout .site-nav-middle {
    margin-right: 0;
  }
}

.rtl-layout .nav-group {
  margin-right: auto;
  margin-left: 0;
  display: flex;
  align-items: center;
}

.rtl-layout .toggle-button-nav {
  margin-right: auto;
  margin-left: 5px;
}

.rtl-layout a.nav-forum {
  margin-right: 0;
  margin-left: 19px;
}

.rtl-layout .post-full-content p code {
  direction: ltr;
  unicode-bidi: isolate;
}

